# Auto-Paper

./: .gitignore  AGENTS.md  AI_INFRA_PLAN.md  DAILY_DIGEST_TEMPLATE.md  EXPLORATION.md  README.md  pyproject.toml
configs/: default.toml
reports/tracks/: README.md
src/: abstracts.py  arxiv_client.py  cli.py  config.py  digest.py  extract.py  manifest.py  models.py  router.py  source_fetch.py  triage.py  utils.py  workflow.py
tests/: test_core.py
